re PR c++/35317 (ICE with operator delete[] and ellipsis)

gcc/cp/

2008-06-15  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/35317
	* class.c (type_requires_array_cookie): Do not consider delete[]
	operators with an ellipsis as second argument.

gcc/testsuite/

2008-06-15  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/35317
	* g++.dg/other/dtor2.C: New test.

From-SVN: r136807